--- a/SpeechToTextClients/SynchronousSpeechRecognition/public/index.html
+++ b/SpeechToTextClients/SynchronousSpeechRecognition/public/index.html
@@ -45,7 +45,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/3.1.7/signalr.min.js"></script>
   <!-- Client -->
-  <script src="javascripts/client2.js" type="module"></script>
+  <script src="javascripts/clientRecordRTC.js" type="module"></script>
 </body>
 
 </html>
