--- a/SpeechToTextClients/SocketIoAndNode/src/public/index.html
+++ b/SpeechToTextClients/SocketIoAndNode/src/public/index.html
@@ -34,10 +34,7 @@
         <br>
     </div>
 
-    <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
-
-    <!-- Nlp -->
-    <script src="https://unpkg.com/compromise@11.14.3/builds/compromise.min.js"></script>
+    <!-- <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script> -->
 
     <!-- Socket -->
     <script src="assets/js/socket.io.js"></script>
