--- a/SpeechToTextClients/SynchronousSpeechRecognition/public/index.html
+++ b/SpeechToTextClients/SynchronousSpeechRecognition/public/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Express</title>
+  <title>Synchronous Google Cloud Speech To Text</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
@@ -18,13 +18,6 @@
       <div id="recordingStatus">&nbsp;</div>
       <br>
 
-      <div>
-          <p id="ResultText">
-              <span class="greyText">No Speech to Text yet
-                  <span>
-          </p>
-      </div>
-
       <br>
       <br>
       <ul id="messageList"></ul>
@@ -32,7 +25,7 @@
 
       <div>
         <p id="ResultText">
-            <span class="greyText">No Speech to Text yet
+            <span class="greyText">
                 <span>
         </p>
     </div>
